# sa_stack

./: .gitignore  CLAUDE.md  MCTS_TREEIRL_SPEC.md  mcts_trajectory_extraction_spec.md  per_belief_mcts_spec.md  preds.p  pyproject.toml  requirements.txt  setup.py
igp2/: __init__.py
igp2/agents/: __init__.py  agent.py  belief_agent.py  keyboard_agent.py  macro_agent.py  maneuver_agent.py  mcts_agent.py  mcts_belief_agent.py  shared_autonomy_agent.py  traffic_agent.py  trajectory_agent.py
igp2/beliefcontrol/: __init__.py  belief_inference.py  first_stage.py  frenet.py  mcts_planner.py  old_mcts_planner.py  planning_utils.py  plotting.py  policy.py  sample_based.py  second_stage.py  secondstage_intervention.py  two_stage_policy.py
igp2/carlasim/: __init__.py  carla_agent_wrapper.py  carla_client.py  local_planner.py  prediction_visualizer.py  status_window.py  traffic_manager.py  util.py  visualisation.py
igp2/core/: config.py  util.py  vehicle.py
igp2/epistemic/: __init__.py  intervention_optimizer.py  macro_guided_generator.py  macro_guided_recognition.py  maneuver_astar.py  maneuver_factory.py  maneuver_probabilities.py  maneuver_recognition.py  plot_intervention.py  plot_recognition.py  sequence_generator.py  trajectory_similarity.py
igp2/opendrive/: map.py  parser.py  plot_map.py
igp2/pgp/: carlapgp.py  evaluate.py  plot_agent_histories.py  plot_graph_traversals.py  plot_map_representation.py  plot_pgp_trajectories.py
igp2/planlibrary/: controller.py  macro_action.py  maneuver.py  maneuver_cl.py
scripts/: run.py
tests/: test_macro_action.py
(+100 files in other folders)
